Gemini Phase I Schema Changes

# Version 2023.1.1 - 2023A
##########################
* Support GMOS B480 Grating

# Version 2022.2.1 - 2022B
##########################
* Support ToO choice on special proposals
* Add a jwstSynergy flag to Queue/Large/FastTuranaround/Special proposal
* Add a MultiFacility entity to Queue proposals and Large Program proposals
* A Proposal can contain multiple attachments. They also have an index to identify them

# Version 2022.1.1 - 2022A
##########################
* Drop the keywords field
* Update the categories set

# Version 2020.1.1 - 2020A
##########################
* Added "Multi-messenger astrophysics" keyword
* Hide "Suprime Cam" for subaru
* Add gender field to Investigator
* Added new instrument IGRINS. (REL-3714)
* Changed TAC Category (now just Category) entries to:
  1. Planetary systems
  2. Star and planet formation
  3. Stars and stellar evolution
  4. Formation and evolution of compact objects
  5. Resolved stellar populations and their environments
  6. Galaxy evolution
  7.Cosmology and fundamental physics

  Old entries are mapped as follows:
  1. Solar System  -> Planetary systems
  2. Galactic      -> Stars and stellar evolution
  3. Extragalactic -> Galaxy evolution

# Version 2019.2.1 - 2019B
##########################

* Added new instrument, Zorro, with two modes, namely Speckle (0.0096"/pix, 6.7" FoV) and Wide Field (0.0725"/pix, 60" FoV). (REL-3454)
* Added new filter, ri, for GMOS-N. (REL-3621)

# Version 2019.1.1 - 2019A
##########################

# Version 2018.2.2 - 2018B
##########################

# Version 2018.2.1 - 2018B
##########################

* Added OVI and OVIC filters for GMOS-N and GMOS-S. (REL-3273)
* Added new instrument, 'Alopeke, with two modes, namely Speckle (0.0096"/pix, 6.7" FoV) and Wide Field (0.0725"/pix, 60" FoV). (REL-3351)

# Version 2018.1.1 - 2018A
##########################

* Hidden filter Y and J-lo for Flamingos2
* Added Subaru Intensive Program proposal class