@@ -14,6 +14,7 @@ class Root(sem:Semester) extends SingleSelectNode[Semester, Instrument, Any](sem
     case Alopeke    => Left(inst.Alopeke())
     case Dssi       => Left(inst.Dssi())
     case Flamingos2 => Left(inst.Flamingos2())
+    case Ghost      => Left(inst.Ghost())
     case GmosSouth  => Left(inst.GmosSouth(sem))
     case GmosNorth  => Left(inst.GmosNorth())
     case Gnirs      => Left(inst.Gnirs())
@@ -42,6 +43,6 @@ class Root(sem:Semester) extends SingleSelectNode[Semester, Instrument, Any](sem
 object Root {
 
   // REL-3769: GPI not available in 2020B.
-  val choices: List[Instrument] = List(Alopeke, Flamingos2, GmosNorth, GmosSouth, Gnirs, Graces, Gsaoi, Igrins, MaroonX, Nifs, Niri, Visitor, Zorro)
+  val choices: List[Instrument] = List(Alopeke, Flamingos2, Ghost, GmosNorth, GmosSouth, Gnirs, Graces, Gsaoi, Igrins, MaroonX, Nifs, Niri, Visitor, Zorro)
 
 }
