@@ -3,6 +3,7 @@ Gemini Phase I Schema Changes
 # Version 2023.1.1 - 2023A
 ##########################
 * Support GMOS B480 Grating
+* Support GHOST Blueprints
 
 # Version 2022.2.1 - 2022B
 ##########################
